Fix slider dots on mobile

--- a/wp-content/themes/betheme-child/style122.css
+++ b/wp-content/themes/betheme-child/style122.css
@@ -608,6 +608,10 @@ a:not(.button) {
   height: inherit;
 }
 
+.testimonials_slider.single-photo .slider_pager li {
+  margin-top: 15px;
+}
+
 .author .title {
   font-size: 14px;
 }
